added two <divs> to handle error messages

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,10 @@
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
+        <div class="empty-tweet hidden new-tweet-error">Tweet cannot be empty</div>
+        <div class="too-long hidden new-tweet-error">Tweet is too long</div>
       </section>
+
       <section id="unknown">
       </section>
     </main>
