added compose button to html and styled in css

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
+      <button class="compose-button">Compose</button>
       <img class="logo" src="/images/bird.png" />
       <span class="header">Tweeter</span>
     </nav>
