--- a/public/index.html
+++ b/public/index.html
@@ -23,31 +23,33 @@
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.4/moment.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
-  <body>
+  <body class= "main-color">
 
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
-      <button class="compose-button">Compose</button>
+      <button class="compose-button">Compose<i class="fa fa-pencil" aria-hidden="true"></i></button>
       <img class="logo" src="/images/bird.png" />
       <span class="header">Tweeter</span>
     </nav>
+    <div class="border-line"></div>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <form id= 'tweet-form' method='POST' action= '/tweets/'>
-          <textarea name="text" placeholder="What are you humming about?"></textarea>
-          <input type="submit" value="Tweet">
+          <textarea class="textarea" name="text" placeholder="What are you humming about?"></textarea>
+          <input class="submit-tweet" type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
         <div class="empty-tweet hidden new-tweet-error">Tweet cannot be empty</div>
         <div class="too-long hidden new-tweet-error">Tweet is too long</div>
       </section>
 
-      <section id="unknown">
+      <section id="tweet-article">
       </section>
     </main>
 
